// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly for a reviewer 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiContainer-root"
        style="padding: 0px;"
      >
        <p>
          🚧 Work in progress 🚧
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiContainer-root"
      style="padding: 0px;"
    >
      <p>
        🚧 Work in progress 🚧
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App renders correctly for a student 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiContainer-root"
        style="padding: 0px;"
      >
        <header
          class="MuiPaper-root MuiAppBar-root MuiAppBar-positionRelative MuiAppBar-colorPrimary MuiPaper-elevation4"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-1"
          >
            <div
              class="makeStyles-main-2"
            >
              <img
                class="makeStyles-logo-4"
                src="logo_white.svg"
              />
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-h5 MuiTypography-colorTextSecondary"
                href="/"
              >
                CompE+
              </a>
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-toolbarLink-3 MuiTypography-body2 MuiTypography-colorTextSecondary"
                href="/resume-review"
                title="Resume Review"
              >
                Resume Review
              </a>
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-toolbarLink-3 MuiTypography-body2 MuiTypography-colorTextSecondary"
                href="/mock-interview"
                title="Mock Interview"
              >
                Mock Interview
              </a>
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-toolbarLink-3 MuiTypography-body2 MuiTypography-colorTextSecondary"
                href="/community"
                title="Community"
              >
                Community
              </a>
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-toolbarLink-3 MuiTypography-body2 MuiTypography-colorTextSecondary"
                href="https://www.compeclub.com/"
                title="CompE Club"
              >
                CompE Club
              </a>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Login
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </header>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
          style="background-image: url(LandingBackground.svg); background-size: cover; padding-bottom: 80px;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-item MuiGrid-grid-xs-10"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item"
                style="height: 100vh;"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-xs-5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-10"
                    >
                      <img
                        class="makeStyles-logo_1-9"
                        src="logo_black.svg"
                      />
                    </div>
                    <h1
                      class="MuiTypography-root MuiTypography-h1"
                    >
                      CompE+
                    </h1>
                    <h3
                      class="MuiTypography-root MuiTypography-h3"
                    >
                      Practice, Insight, and Support
                    </h3>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-7"
                >
                  <div
                    class="MuiBox-root MuiBox-root-11"
                  >
                    <img
                      class="makeStyles-svg-5"
                      src="pair_programming.svg"
                    />
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-direction-xs-column MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h2 MuiTypography-alignCenter"
                      >
                        CompE+ is a student-led pilot program to provide support for computer engineering students looking for internships
                      </h2>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label"
                        >
                          Get Started
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-item"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-8"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h1 MuiTypography-noWrap"
                    >
                      What’s CompE+ ?
                    </h2>
                    <h2
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      CompE+ is a student led pilot program to provide CompE students with practice, insight, and support when finding internships in the tech industry. Arguably, computer engineering is a unique discipline and requires different resources and support - that’s where CompE+ comes in!
                       
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                >
                  <img
                    class="makeStyles-logo_2-8"
                    src="logo_black.svg"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-8 MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1"
                >
                  Values
                </h1>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-5 MuiGrid-item"
              >
                <div
                  class="MuiGrid-root makeStyles-values-6 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3"
                >
                  <img
                    class="makeStyles-svg-5"
                    src="practice.svg"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2"
                  >
                    Practice
                  </h2>
                  <p
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    Technical interviews can be difficult and requires a good amount of practice. By providing resources and services, CompE+ can help computer engineering students tackle the technical interview with greater confidence
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-5 MuiGrid-item"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2 MuiTypography-alignRight"
                  >
                    Insight
                  </h2>
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight"
                  >
                    The tech industry can be a black box to new students. CompE+ strives to provide insight into the industry by sharing the internship experience with all computer engineering students
                  </p>
                </div>
                <div
                  class="MuiGrid-root makeStyles-values-6 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3"
                >
                  <img
                    class="makeStyles-svg-5"
                    src="industry.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-5 MuiGrid-item"
              >
                <div
                  class="MuiGrid-root makeStyles-values-6 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3"
                >
                  <img
                    class="makeStyles-svg-5"
                    src="support.svg"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2"
                  >
                    Support
                  </h2>
                  <p
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    Entering the tech industry can be intimidating to many, even after landing the first internship, imposter syndrome can hit hard. Fostering a positive community is an important goal of CompE+
                  </p>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-8 MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1"
                >
                  Services
                </h1>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-item"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                  >
                    <img
                      class="makeStyles-services_svg-7"
                      src="resume_review.svg"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                  >
                    <img
                      class="makeStyles-services_svg-7"
                      src="mock_interview.svg"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                  >
                    <img
                      class="makeStyles-services_svg-7"
                      src="teamwork.svg"
                    />
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h2"
                    >
                      Resume Review
                    </h2>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h2"
                    >
                      Mock Interviews
                    </h2>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h2"
                    >
                      Community
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
                    >
                      Led by senior CompE students, practice communicating your thoughts and problem-solving skills with mock technical interviews
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
                    >
                      Simulate the application process by getting your resume reviewed by the co-op office followed by a senior compE student to provide a technical perspective
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
                    >
                      Connect with other CompE students, gain insight on different companies that other students have worked for, and learn more about the tech industry
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiContainer-root"
      style="padding: 0px;"
    >
      <header
        class="MuiPaper-root MuiAppBar-root MuiAppBar-positionRelative MuiAppBar-colorPrimary MuiPaper-elevation4"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-1"
        >
          <div
            class="makeStyles-main-2"
          >
            <img
              class="makeStyles-logo-4"
              src="logo_white.svg"
            />
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-h5 MuiTypography-colorTextSecondary"
              href="/"
            >
              CompE+
            </a>
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-toolbarLink-3 MuiTypography-body2 MuiTypography-colorTextSecondary"
              href="/resume-review"
              title="Resume Review"
            >
              Resume Review
            </a>
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-toolbarLink-3 MuiTypography-body2 MuiTypography-colorTextSecondary"
              href="/mock-interview"
              title="Mock Interview"
            >
              Mock Interview
            </a>
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-toolbarLink-3 MuiTypography-body2 MuiTypography-colorTextSecondary"
              href="/community"
              title="Community"
            >
              Community
            </a>
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-toolbarLink-3 MuiTypography-body2 MuiTypography-colorTextSecondary"
              href="https://www.compeclub.com/"
              title="CompE Club"
            >
              CompE Club
            </a>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Login
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </header>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
        style="background-image: url(LandingBackground.svg); background-size: cover; padding-bottom: 80px;"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-item MuiGrid-grid-xs-10"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item"
              style="height: 100vh;"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-xs-5"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <div
                    class="MuiBox-root MuiBox-root-10"
                  >
                    <img
                      class="makeStyles-logo_1-9"
                      src="logo_black.svg"
                    />
                  </div>
                  <h1
                    class="MuiTypography-root MuiTypography-h1"
                  >
                    CompE+
                  </h1>
                  <h3
                    class="MuiTypography-root MuiTypography-h3"
                  >
                    Practice, Insight, and Support
                  </h3>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-7"
              >
                <div
                  class="MuiBox-root MuiBox-root-11"
                >
                  <img
                    class="makeStyles-svg-5"
                    src="pair_programming.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-direction-xs-column MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h2 MuiTypography-alignCenter"
                    >
                      CompE+ is a student-led pilot program to provide support for computer engineering students looking for internships
                    </h2>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Get Started
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-8"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h1 MuiTypography-noWrap"
                  >
                    What’s CompE+ ?
                  </h2>
                  <h2
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    CompE+ is a student led pilot program to provide CompE students with practice, insight, and support when finding internships in the tech industry. Arguably, computer engineering is a unique discipline and requires different resources and support - that’s where CompE+ comes in!
                     
                  </h2>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
              >
                <img
                  class="makeStyles-logo_2-8"
                  src="logo_black.svg"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-8 MuiGrid-item"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1"
              >
                Values
              </h1>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-5 MuiGrid-item"
            >
              <div
                class="MuiGrid-root makeStyles-values-6 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3"
              >
                <img
                  class="makeStyles-svg-5"
                  src="practice.svg"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2"
                >
                  Practice
                </h2>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Technical interviews can be difficult and requires a good amount of practice. By providing resources and services, CompE+ can help computer engineering students tackle the technical interview with greater confidence
                </p>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-5 MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2 MuiTypography-alignRight"
                >
                  Insight
                </h2>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight"
                >
                  The tech industry can be a black box to new students. CompE+ strives to provide insight into the industry by sharing the internship experience with all computer engineering students
                </p>
              </div>
              <div
                class="MuiGrid-root makeStyles-values-6 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3"
              >
                <img
                  class="makeStyles-svg-5"
                  src="industry.svg"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-5 MuiGrid-item"
            >
              <div
                class="MuiGrid-root makeStyles-values-6 MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3"
              >
                <img
                  class="makeStyles-svg-5"
                  src="support.svg"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2"
                >
                  Support
                </h2>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Entering the tech industry can be intimidating to many, even after landing the first internship, imposter syndrome can hit hard. Fostering a positive community is an important goal of CompE+
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-8 MuiGrid-item"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1"
              >
                Services
              </h1>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                >
                  <img
                    class="makeStyles-services_svg-7"
                    src="resume_review.svg"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                >
                  <img
                    class="makeStyles-services_svg-7"
                    src="mock_interview.svg"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                >
                  <img
                    class="makeStyles-services_svg-7"
                    src="teamwork.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2"
                  >
                    Resume Review
                  </h2>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2"
                  >
                    Mock Interviews
                  </h2>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-4"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2"
                  >
                    Community
                  </h2>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
                  >
                    Led by senior CompE students, practice communicating your thoughts and problem-solving skills with mock technical interviews
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
                  >
                    Simulate the application process by getting your resume reviewed by the co-op office followed by a senior compE student to provide a technical perspective
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
                  >
                    Connect with other CompE students, gain insight on different companies that other students have worked for, and learn more about the tech industry
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App renders correctly for an admin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiContainer-root"
        style="padding: 0px;"
      >
        <p>
          🚧 Work in progress 🚧
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiContainer-root"
      style="padding: 0px;"
    >
      <p>
        🚧 Work in progress 🚧
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App renders correctly for an interviewer 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiContainer-root"
        style="padding: 0px;"
      >
        <p>
          🚧 Work in progress 🚧
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiContainer-root"
      style="padding: 0px;"
    >
      <p>
        🚧 Work in progress 🚧
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
